--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -24,3 +24,15 @@ $govuk-assets-path: '/govuk/assets/';
 .float-right {
     float: right;
 }
+
+#gov-05-error.hidden {
+    display: none;
+}
+
+#gov-06-error.hidden {
+    display: none;
+}
+
+.inline-block {
+    display: inline-block
+}
