--- a/app/views/1-0-0/gov-08.html
+++ b/app/views/1-0-0/gov-08.html
@@ -22,160 +22,161 @@
       
       <p class="govuk-body">Enter figures for groups that apply.</p>
      
+      <form action="gov-09" method="post" class="form">
       <h2 class="govuk-heading-m">White</h2>
       <div class="govuk-form-group">
-        <label class="govuk-label" for="width-5">
+        <label class="govuk-label" for="ewsnb">
           English / Welsh / Scottish / Northern Irish / British
         </label>
-        <input class="govuk-input govuk-input--width-5" id="width-5" name="width-5" type="text">
+        <input class="govuk-input govuk-input--width-5" id="ewsnb" name="ewsnb" type="text" value="{{ data['ewsnb'] }}">
       </div>
       
       <div class="govuk-form-group">
-        <label class="govuk-label" for="width-5">
+        <label class="govuk-label" for="irish">
           Irish
         </label>
-        <input class="govuk-input govuk-input--width-5" id="width-5" name="width-5" type="text">
+        <input class="govuk-input govuk-input--width-5" id="irish" name="irish" type="text" value="{{ data['irish'] }}">
       </div>
       
       <div class="govuk-form-group">
-        <label class="govuk-label" for="width-5">
+        <label class="govuk-label" for="gypsy">
           Gypsy or Irish Traveller
         </label>
-        <input class="govuk-input govuk-input--width-5" id="width-5" name="width-5" type="text">
+        <input class="govuk-input govuk-input--width-5" id="gypsy" name="gypsy" type="text" value="{{ data['gypsy'] }}">
       </div>
       
       <div class="govuk-form-group">
-        <label class="govuk-label" for="width-5">
+        <label class="govuk-label" for="roma">
           Roma
         </label>
-        <input class="govuk-input govuk-input--width-5" id="width-5" name="width-5" type="text">
+        <input class="govuk-input govuk-input--width-5" id="roma" name="roma" type="text" value="{{ data['roma'] }}">
       </div>
       
       <div class="govuk-form-group">
-        <label class="govuk-label" for="width-5">
+        <label class="govuk-label" for="other-white">
           Any other white background
         </label>
-        <input class="govuk-input govuk-input--width-5" id="width-5" name="width-5" type="text">
+        <input class="govuk-input govuk-input--width-5" id="other-white" name="other-white" type="text" value="{{ data['other-white'] }}">
       </div>
       
       <h2 class="govuk-heading-m">Mixed / Multiple ethnic groups</h2>
       
       <div class="govuk-form-group">
-        <label class="govuk-label" for="width-5">
+        <label class="govuk-label" for="wbc">
           White and Black Caribbean
         </label>
-        <input class="govuk-input govuk-input--width-5" id="width-5" name="width-5" type="text">
+        <input class="govuk-input govuk-input--width-5" id="wbc" name="wbc" type="text" value="{{ data['wbc'] }}">
       </div>
       
       <div class="govuk-form-group">
-        <label class="govuk-label" for="width-5">
+        <label class="govuk-label" for="wba">
           White and Black African
         </label>
-        <input class="govuk-input govuk-input--width-5" id="width-5" name="width-5" type="text">
+        <input class="govuk-input govuk-input--width-5" id="wba" name="wba" type="text" value="{{ data['wba'] }}">
       </div>
       
       <div class="govuk-form-group">
-        <label class="govuk-label" for="width-5">
+        <label class="govuk-label" for="wa">
           White and Asian
         </label>
-        <input class="govuk-input govuk-input--width-5" id="width-5" name="width-5" type="text">
+        <input class="govuk-input govuk-input--width-5" id="wa" name="wa" type="text" value="{{ data['wa'] }}">
       </div>
       
       <div class="govuk-form-group">
-        <label class="govuk-label" for="width-5">
+        <label class="govuk-label" for="other-mixed">
           Any other mixed / Multiple ethnic background
         </label>
-        <input class="govuk-input govuk-input--width-5" id="width-5" name="width-5" type="text">
+        <input class="govuk-input govuk-input--width-5" id="other-mixed" name="other-mixed" type="text" value="{{ data['other-mixed'] }}">
       </div>
       
       <h2 class="govuk-heading-m">Asian / Asian British</h2>      
       
       <div class="govuk-form-group">
-        <label class="govuk-label" for="width-5">
+        <label class="govuk-label" for="indian">
           Indian
         </label>
-        <input class="govuk-input govuk-input--width-5" id="width-5" name="width-5" type="text">
+        <input class="govuk-input govuk-input--width-5" id="indian" name="indian" type="text" value="{{ data['indian'] }}">
       </div>
       
       <div class="govuk-form-group">
-        <label class="govuk-label" for="width-5">
+        <label class="govuk-label" for="pakistani">
           Pakistani
         </label>
-        <input class="govuk-input govuk-input--width-5" id="width-5" name="width-5" type="text">
+        <input class="govuk-input govuk-input--width-5" id="pakistani" name="pakistani" type="text" value="{{ data['pakistani'] }}">
       </div>
       
       <div class="govuk-form-group">
-        <label class="govuk-label" for="width-5">
+        <label class="govuk-label" for="bangladeshi">
           Bangladeshi
         </label>
-        <input class="govuk-input govuk-input--width-5" id="width-5" name="width-5" type="text">
+        <input class="govuk-input govuk-input--width-5" id="bangladeshi" name="bangladeshi" type="text" value="{{ data['bangladeshi'] }}">
       </div>
       
       <div class="govuk-form-group">
-        <label class="govuk-label" for="width-5">
+        <label class="govuk-label" for="chinese">
           Chinese
         </label>
-        <input class="govuk-input govuk-input--width-5" id="width-5" name="width-5" type="text">
+        <input class="govuk-input govuk-input--width-5" id="chinese" name="chinese" type="text" value="{{ data['chinese'] }}">
       </div>
       
       <div class="govuk-form-group">
-        <label class="govuk-label" for="width-5">
+        <label class="govuk-label" for="other-asian">
           Any other Asian background
         </label>
-        <input class="govuk-input govuk-input--width-5" id="width-5" name="width-5" type="text">
+        <input class="govuk-input govuk-input--width-5" id="other-asian" name="other-asian" type="text" value="{{ data['other-asian'] }}">
       </div>
 
 
       <h2 class="govuk-heading-m">Black / African / Caribbean / Black British</h2>      
       
       <div class="govuk-form-group">
-        <label class="govuk-label" for="width-5">
+        <label class="govuk-label" for="african">
           African
         </label>
-        <input class="govuk-input govuk-input--width-5" id="width-5" name="width-5" type="text">
+        <input class="govuk-input govuk-input--width-5" id="african" name="african" type="text" value="{{ data['african'] }}">
       </div>
       
       <div class="govuk-form-group">
-        <label class="govuk-label" for="width-5">
+        <label class="govuk-label" for="caribbean">
           Caribbean
         </label>
-        <input class="govuk-input govuk-input--width-5" id="width-5" name="width-5" type="text">
+        <input class="govuk-input govuk-input--width-5" id="caribbean" name="caribbean" type="text" value="{{ data['caribbean'] }}">
       </div>
       
       <div class="govuk-form-group">
-        <label class="govuk-label" for="width-5">
+        <label class="govuk-label" for="other-black">
           Any other Black / African / Caribbean
         </label>
-        <input class="govuk-input govuk-input--width-5" id="width-5" name="width-5" type="text">
+        <input class="govuk-input govuk-input--width-5" id="other-black" name="other-black" type="text" value="{{ data['other-black'] }}">
       </div>
       
       <h2 class="govuk-heading-m">Other</h2>      
       
       <div class="govuk-form-group">
-        <label class="govuk-label" for="width-5">
+        <label class="govuk-label" for="arab">
           Arab
         </label>
-        <input class="govuk-input govuk-input--width-5" id="width-5" name="width-5" type="text">
+        <input class="govuk-input govuk-input--width-5" id="arab" name="arab" type="text" value="{{ data['arab'] }}">
       </div>
       
       <div class="govuk-form-group">
-        <label class="govuk-label" for="width-5">
+        <label class="govuk-label" for="other-ethnic">
           Any other ethnic group
         </label>
-        <input class="govuk-input govuk-input--width-5" id="width-5" name="width-5" type="text">
+        <input class="govuk-input govuk-input--width-5" id="other-ethnic" name="other-ethnic" type="text" value="{{ data['other-ethnic'] }}">
       </div>
       
       <div class="govuk-form-group">
-        <label class="govuk-label" for="width-5">
+        <label class="govuk-label" for="ethnicity-pnts">
           Prefer not to say
         </label>
-        <input class="govuk-input govuk-input--width-5" id="width-5" name="width-5" type="text">
+        <input class="govuk-input govuk-input--width-5" id="ethnicity-pnts" name="ethnicity-pnts" type="text" value="{{ data['ethnicity-pnts'] }}">
       </div>
 
-      <a href="gov-09.html" role="button" draggable="false" class="govuk-button" data-module="govuk-button">
+      <button role="button" draggable="false" class="govuk-button" data-module="govuk-button">
         Save and continue
-      </a>
-
+      </button>
+      </form>
     </div>
 
    
