--- a/app/views/1-0-0/gov-10.html
+++ b/app/views/1-0-0/gov-10.html
@@ -15,7 +15,7 @@
         <fieldset class="govuk-fieldset" aria-describedby="changed-name-hint">
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
             <h1 class="govuk-fieldset__heading">
-              Were there any board member vacancies during academic year ?
+              Were there any board member vacancies during the academic year ?
             </h1>
           </legend>
           <div id="changed-name-hint" class="govuk-hint">
