--- a/app/views/1-0-0/gov-05.html
+++ b/app/views/1-0-0/gov-05.html
@@ -9,7 +9,24 @@
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-              {% include "./includes/gov_data_tag.html" %}  
+
+      <div id="gov-05-error" class="govuk-error-summary hidden" aria-labelledby="error-summary-title" role="alert" tabindex="-1" data-module="govuk-error-summary">
+        <h2 class="govuk-error-summary__title" id="error-summary-title">
+          There is a problem
+        </h2>
+        <div class="govuk-error-summary__body">
+          <ul class="govuk-list govuk-error-summary__list">
+            <li>
+              <a href="#passport-issued-day">The total number for gender representation must be the same as the number of board members. Enter gender figures that are equal to <span id="totalGovernors"></span> (the number of board members)</a>
+            </li>
+            <!-- <li>
+              <a href="#postcode-input">Enter a postcode, like AA1 1AA</a>
+            </li> -->
+          </ul>
+        </div>
+      </div>
+
+      {% include "./includes/gov_data_tag.html" %}  
 
         <h1 class="govuk-heading-l">
         What is the gender composition of the board?
@@ -17,43 +34,50 @@
       
       <p class="govuk-body">Enter figures into applicable gender categories</p>
 
-      <form action="gov-06" method="post" class="form">
+      <form action="" method="post" class="form">
       <div class="govuk-form-group">
         <label class="govuk-label govuk-label--m" for="male">
           Male board members
         </label>
-        <input class="govuk-input govuk-input--width-5" id="male" name="male" type="text">
+        <input class="govuk-input govuk-input--width-5" id="male" name="male" type="text" value="{{ data['male'] }}">
       </div>
       
       <div class="govuk-form-group">
         <label class="govuk-label govuk-label--m" for="female">
           Female board members
         </label>
-        <input class="govuk-input govuk-input--width-5" id="female" name="female" type="text">
+        <input class="govuk-input govuk-input--width-5" id="female" name="female" type="text" value="{{ data['female'] }}">
       </div>
       
       <div class="govuk-form-group">
         <label class="govuk-label govuk-label--m" for="another">
           How many identify in another way?
         </label>
-        <input class="govuk-input govuk-input--width-5" id="another" name="another" type="text">
+        <input class="govuk-input govuk-input--width-5" id="another" name="another" type="text" value="{{ data['another'] }}">
       </div>
 
       <div class="govuk-form-group">
         <label class="govuk-label govuk-label--m" for="pnts">
           How many prefer not to say?
         </label>
-        <input class="govuk-input govuk-input--width-5" id="pnts" name="pnts" type="text">
+        <input class="govuk-input govuk-input--width-5" id="pnts" name="pnts" type="text" value="{{ data['pnts'] }}">
       </div>
       
 
 
-
-          <button id="testButton" class="govuk-button" data-module="govuk-button">
+      <div class="govuk-button-group">
+          <button id="genderCompButton" role="button" draggable="false" class="govuk-button" data-module="govuk-button">
             Save and continue
           </button>
+          
+          <button id="genderCompButtonExit" role="button" draggable="false" class="govuk-button govuk-button--secondary" data-module="govuk-button">
+            Save and exit
+          </button>
+        </div>
+</form>
+        
 
-        </form>
+
     </div>
 
    
