--- a/app/views/index.html
+++ b/app/views/index.html
@@ -34,6 +34,8 @@
                     <li>Working on a new version of <a href="1-0-0/start.html">Homepage</a></li>
                     <li>Added a new page <a href="1-0-0/gov-04b.html">gov-04b</a></li>
                     <li>Added a new page vaiant <a href="1-0-0/gov-04c.html">gov-04c</a></li>
+                    <li>Validation working <a href="1-0-0/gov-05.html">gov-05</a></li>
+                    <li>Validation working <a href="1-0-0/gov-06.html">gov-06</a></li>
 
                   
                 </ul>
